--- a/src/components/navbar/styles.css
+++ b/src/components/navbar/styles.css
@@ -4,3 +4,14 @@
     justify-content: space-between;
     margin: 20px 0px;
 }
+
+.nav-link {
+    margin: 0px 10px;
+    color: rgb(53, 53, 53);
+}
+
+.logo {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #111
+}
